
<resources>
    <string-array name="colorRiddles">
        <item>I\'m feeling red</item>
        <item>I\'m feeling green</item>
        <item>I\'m feeling blue</item>
    </string-array>
    <string-array name="colorOptions">
        <item>100-0-0</item>
        <item>0-100-0</item>
        <item>0-0-100</item>
    </string-array>
    <string-array name="colorCodeCheat">
        <item>(255-0-0)</item>
        <item>(0-255-0)</item>
        <item>(0-0-255)</item>
    </string-array>
    <string-array name="sizeRiddles">
        <item>I want to be big</item>
        <item>I want to be medium</item>
        <item>I want to be small</item>
    </string-array>
    <string-array name="sizeSpinnerOptions">
        <item>big</item>
        <item>medium</item>
        <item>small</item>
    </string-array>
    <string-array name="nameRiddles">
        <item>You can call me "AI"</item>
        <item>You can call me "Robot"</item>
        <item>You can call me "Android"</item>
    </string-array>
    <string-array name="nameOptions">
        <item>AI</item>
        <item>Robot</item>
        <item>Android</item>
    </string-array>
    <string-array name="imageRiddles">
    <item>I see a bike</item>
    <item>I see a motorcycle</item>
    <item>I see a car</item>
    </string-array>
    <string-array name="cheatImgRiddles">
        <item>Please select a bike</item>
        <item>Please select a motorcycle</item>
        <item>Please select a car</item>
    </string-array>
    <string-array name="imageOptions">
        <item>bike</item>
        <item>motorcycle</item>
        <item>car</item>
    </string-array>
    <string name="app_name">A6</string>
    <string name="instructionText">Solve the Puzzle</string>
    <string name="solveText">SOLVE</string>
    <string name="room1">ROOM 1</string>
    <string name="room2">ROOM 2</string>
    <string name="room3">ROOM 3</string>
    <string name="room4">ROOM 4</string>
    <string name="sizeText">Size:</string>
    <string name="nameText">What is my name?: </string>
    <string name="setChangesText">Set Changes</string>
    <string name="R">R: %d</string>
    <string name="G">G: %d</string>
    <string name="B">B: %d</string>
    <string name="Preview">Preview: </string>
    <string name="setChanges">Set Changes</string>
    <string name="winTextView">You WIN</string>
    <string name="lostTextView">Try Again.</string>
    <string name="cheatTextView">Cheat</string>
</resources>
