<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructionText"
            android:textSize="18sp"
            android:layout_margin="4dp" />

        <TextView
            android:id="@+id/colorRiddleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructionText"
            android:textSize="14sp"
            android:textColor="@color/incorrectRed"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/sizeRiddleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructionText"
            android:textSize="14sp"
            android:textColor="@color/incorrectRed"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/nameRiddleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructionText"
            android:textSize="14sp"
            android:textColor="@color/incorrectRed"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/imageRiddleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructionText"
            android:textSize="14sp"
            android:textColor="@color/incorrectRed"
            android:layout_margin="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/room1Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/room1" />

            <Button
                android:id="@+id/room2Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/room2" />

            <Button
                android:id="@+id/room3Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/room3" />

            <Button
                android:id="@+id/room4Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/room4" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solveText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>