<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        tools:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="32dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/redTextView"
                android:layout_width="@dimen/ColorTextWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/R" />

            <SeekBar
                android:id="@+id/seekBarR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/greenTextView"
                android:layout_width="@dimen/ColorTextWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G" />

            <SeekBar
                android:id="@+id/seekBarG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/blueTextView"
                android:layout_width="@dimen/ColorTextWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/B" />

            <SeekBar
                android:id="@+id/seekBarB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/Preview" />

            <TextView
                android:id="@+id/view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ColorChangesButton"
                    android:layout_width="@dimen/setButtonWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/setChanges" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>